--- a/views/formpage.ejs
+++ b/views/formpage.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Taxargo:UserForm</title>
 
         <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
@@ -22,6 +22,7 @@
 
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="styles.css">
     <script src="https://use.fontawesome.com/4301952e86.js"></script>
 
@@ -88,7 +89,7 @@
 
     <!--====== Main js ======-->
     <script defer src="filePond.js"></script>
-    <script src="script1.js"></script>
+    <!-- <script src="script1.js"></script> -->
     <!-- <script src="assets/js/main.js"></script> -->
     
     <!-- <script src="addContentScript.js"></script> -->
