--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     
     <!--====== Title ======-->
-    <title>TaxArgo:Home</title>
+    <title>Taxargo:Home</title>
     
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,9 +27,15 @@
     
     <!--====== Default CSS ======-->
     <link rel="stylesheet" href="assets/css/default.css">
+    <!--====== fontawesome CSS ======-->
+    <link rel="stylesheet" href="assets/css/all.css">
+    <link rel="stylesheet" href="assets/css/fontawesome.min.css">
     
     <!--====== Style CSS ======-->
+    
     <link rel="stylesheet" href="assets/css/style.css">
+
+    
     
 </head>
 
@@ -40,13 +46,19 @@
     <div class="preloader">
         <div class="loader">
             <div class="ytp-spinner">
+                <img src="assets/images/favicon.png" style="image-orientation: 0turn;" alt="">
+                            
                 <div class="ytp-spinner-container">
+                    
                     <div class="ytp-spinner-rotator">
                         <div class="ytp-spinner-left">
-                            <div class="ytp-spinner-circle"></div>
+                            <div class="ytp-spinner-circle">
+                               </div>
                         </div>
+                        
                         <div class="ytp-spinner-right">
-                            <div class="ytp-spinner-circle"></div>
+                            <div class="ytp-spinner-circle">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -147,9 +159,8 @@
     <script src="assets/js/jquery.easing.min.js"></script>
     <script src="assets/js/scrolling-nav.js"></script>
 
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    
-    <script src="https://use.fontawesome.com/4301952e86.js"></script>
+    <!-- fontAwesome js     -->
+    <script src="assets/js/all.js"></script>
 
     
     <!--====== Main js ======-->
