--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -17,13 +17,13 @@
                     </div>
                     <div class="pricing-header text-center">
                         <h5 class="sub-title">ITR-1</h5>
-                        <p class="month"><span class="price"><i class="fa fa-inr" aria-hidden="true"></i>  499</span>/</p>
+                        <p class="month"><span class="price"><i class="lni lni-rupee"></i> 499</span>/</p>
                     </div>
                     <div class="pricing-list ">
                         <ul>
-                            <li style="padding-left:3em"><i class="fa fa-circle-o" aria-hidden="true"></i>Easy Uploading.</li>
-                            <li style="padding-left:3em"><i class="fa fa-circle-o" aria-hidden="true"></i>Easy Submission.</li>
-                            <li style="padding-left:3em"><i class="fa fa-circle-o" aria-hidden="true"></i>One-Click-Filing.</li>
+                            <li style="padding-left:3em"><i class="lni lni-angle-double-right"></i>Easy Uploading.</li>
+                            <li style="padding-left:3em"><i class="lni lni-angle-double-right"></i>Easy Submission.</li>
+                            <li style="padding-left:3em"><i class="lni lni-angle-double-right"></i>One-Click-Filing.</li>
                         </ul>
                     </div>
                        
@@ -37,13 +37,13 @@
                     </div>
                     <div class="pricing-header text-center">
                         <h5 class="sub-title">GST-Registration</h5>
-                        <p class="month"><span class="price"><i class="fa fa-inr" aria-hidden="true"></i> 999</span>/</p>
+                        <p class="month"><span class="price"><i class="lni lni-rupee"></i> 999</span>/</p>
                     </div>
                     <div class="pricing-list">
                         <ul>
-                            <li  style="padding-left:3em"><i class="fa fa-circle-o" aria-hidden="true"></i>Register Yourself.</li>
-                            <li style="padding-left:3em"><i class="fa fa-circle-o" aria-hidden="true"></i>Pay for the service.</li>
-                            <li style="padding-left:3em"><i class="fa fa-circle-o" aria-hidden="true"></i>Upload the Documents.</li>
+                            <li  style="padding-left:3em"><i class="lni lni-angle-double-right"></i>Easy Uploading.</li>
+                            <li style="padding-left:3em"><i class="lni lni-angle-double-right"></i>Easy Submission.</li>
+                            <li style="padding-left:3em"><i class="lni lni-angle-double-right"></i>One-Click-Registration.</li>
                             
                         </ul>
                     </div>
