--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Taxargo:Payment</title>
 
         <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
@@ -11,6 +11,8 @@
     <!-- ====== Magnific Popup CSS ====== -->
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
         
+    <!--====== Line Icons CSS ======-->
+    <link rel="stylesheet" href="assets/css/LineIcons.css">
     <!--====== Slick CSS ======-->
     <link rel="stylesheet" href="assets/css/slick.css">
         
@@ -20,9 +22,10 @@
     
     
 
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-     <link rel="stylesheet" href="styles.css"> 
+    
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/all.css">
+  <link rel="stylesheet" href="styles.css">
       
      <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
     <script src="https://use.fontawesome.com/4301952e86.js"></script>
@@ -62,10 +65,10 @@ background: linear-gradient(to right, #0062E6, #33AEFF);"
                 <p class="month"><span id="priceElement1" class="price"><i class="fa fa-inr" aria-hidden="true"></i> <%= items.products[0].price %></span>/</p>
             </div>
             <div class="pricing-list ">
-                <ul>
-                    <li style="padding-left:3em">Easy Uploading.</li>
-                    <li style="padding-left:3em">Easy Submission.</li>
-                    <li style="padding-left:3em">One-Click-Filing.</li>
+                <ul style="list-style-type: none;"> 
+                    <li ><i class="lni lni-angle-double-right"></i>Easy Uploading.</li>
+                    <li ><i class="lni lni-angle-double-right"></i>Easy Submission.</li>
+                    <li ><i class="lni lni-angle-double-right"></i>One-Click-Filing.</li>
                 </ul>
             </div>
                
@@ -82,11 +85,11 @@ background: linear-gradient(to right, #0062E6, #33AEFF);"
                 <p class="month"><span id="priceElement2" class="price"><i class="fa fa-inr" aria-hidden="true"></i> <%= items.products[1].price %></span>/</p>
             </div>
             <div class="pricing-list">
-                <ul>
-                    <li  style="padding-left:3em"></i>Register Yourself.</li>
-                    <li style="padding-left:3em">Pay for the service.</li>
-                    <li style="padding-left:3em">Upload the Documents.</li>
-                    
+                <ul style="list-style-type: none;">
+                    <li ><i class="lni lni-angle-double-right"></i>Easy Uploading.</li>
+                    <li ><i class="lni lni-angle-double-right"></i>Easy Submission.</li>
+                    <li ><i class="lni lni-angle-double-right"></i>One-Click-Registration.</li>
+                   
                 </ul>
             </div>
             
@@ -170,8 +173,8 @@ background: linear-gradient(to right, #0062E6, #33AEFF);"
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script> -->
     
     <!--====== Slick js ======-->
     <script src="assets/js/slick.min.js"></script>
@@ -205,7 +208,6 @@ background: linear-gradient(to right, #0062E6, #33AEFF);"
     <script src="script1.js"></script>
     <script src="assets/js/main.js"></script>
     
-    <script src="addContentScript.js"></script>
  
 </body>
 </html>
