--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -22,7 +22,7 @@
                           </div>
                           <div class="card-body">
                             <h5 class="card-title text-center">Contact-Us</h5>
-                            <form class="form-signin" action="/register" method="POST" >
+                            <form class="form-signin" action="/">
                 
                               <div class="form-label-group">
                                 <input name="username" type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
