--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -61,20 +61,18 @@
                                             <th scope="row"></th>
                                             <td>Address:</td>
                                             <td><%=data.userPersonalData[0].flatno%>,<%=data.userPersonalData[0].streetname%>,<%=data.userPersonalData[0].localityname%>,<%=data.userPersonalData[0].townname%></td>
-                                            <!-- <td>@fat</td> -->
+                                            
                                           </tr>
                                           <tr>
                                             <th scope="row"></th>
                                             <td>Mobile No:</td>
                                             <td><%=data.userPersonalData[0].mobileno%></td>
-                                            <!-- <td>@twitter</td>   -->
-                                          </tr>
+                                        </tr>
                                           <tr>
                                             <th scope="row"></th>
                                             <td>City:</td>
                                             <td><%=data.userPersonalData[0].townname%></td>
-                                            <!-- <td>@twitter</td>   -->
-                                          </tr>
+                                         </tr>
                                           <tr>
                                             <th scope="row"></th>
                                             <td>State:</td>
@@ -85,16 +83,14 @@
                                             <th scope="row"></th>
                                             <td>Pincode:</td>
                                             <td><%=data.userPersonalData[0].pincode%></td>
-                                            <!-- <td>@twitter</td>   -->
                                           </tr>
                                         </tbody>
                                       </table>  
                                  <br>
                                  <h6 class="heading-content">Uploaded Documents</h6>
                                  <div class="gap  row justify-content-around" style="width: auto;">
-                                   <div class="col-md-3 " >
-                                    <a href="data: <%= data.userPersonalData[0].savefile1[0].file1Type%>;charset=utf-8;base64,<%= arr[0]%>" download><img style="width: 200px ;" src="data: <%= data.userPersonalData[0].savefile1[0].file1Type%>;charset=utf-8;base64,<%= arr[0]%>"></a> 
-                                   </div>
+                                  <div class="col-md-3"><img style="width: 200px ;" src="data: <%= data.userPersonalData[0].savefile1[0].file1Type%>;charset=utf-8;base64,<%= arr[0]%>">
+                                  </div>
                                    <div class="col-md-3"><img style="width: 200px ;" src="data: <%= data.userPersonalData[0].savefile1[1].file1Type%>;charset=utf-8;base64,<%= arr[1]%>">
                                    </div>
                                    <div class="col-md-3 "><img style="width: 200px;" src="data: <%= data.userPersonalData[0].savefile1[2].file1Type%>;charset=utf-8;base64,<%= arr[2]%>">
@@ -122,8 +118,8 @@
                                             </div>
                                             
                                                
-                                        </div> <!-- pricing style one -->
-                                    </div>
+                                        </div> 
+                                         </div>
                                     
                                     <div class="col-lg-4 col-md-7 col-sm-9">
                                         <div class="pricing-style mt-30">
@@ -135,8 +131,8 @@
                                                 <p class="month"><span id="priceElement2" class="price"><i class="fa fa-inr" aria-hidden="true"></i> <%= items.products[1].price %></span>/</p>
                                             </div>
                                                                                       
-                                        </div> <!-- pricing style one -->
-                                    </div>
+                                        </div> 
+                                        </div>
                                     
                                      
                                 </div>
@@ -228,7 +224,7 @@
       </script>
       <script src="https://checkout.razorpay.com/v1/checkout.js"></script> 
       
-      <script src="razorPay1.js" defer></script>
+      <script src="razorpay1.js" defer></script>
    
    
       // <!--====== Main js ======-->
