--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,25 +1,20 @@
+
 <section class="footer-area footer-dark " >
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <div class="footer-logo text-center">
-                    <a class="mt-30 page-scroll" href="#home"><img src="assets/images/logo.svg" alt="Logo"></a>
+                    <a class="mt-30 page-scroll" href="#home"><img class="rounded-circle" style="width: 60px;height: 60px;" src="assets/images/logo.jpg" alt="Logo"></a>
                 </div> <!-- footer logo -->
-                <!-- <ul class="social text-center mt-60">
-                    <li><a href="https://facebook.com/uideckHQ"><i class="lni lni-facebook-filled"></i></a></li>
-                    <li><a href="https://twitter.com/uideckHQ"><i class="lni lni-twitter-original"></i></a></li>
-                    <li><a href="https://instagram.com/uideckHQ"><i class="lni lni-instagram-original"></i></a></li>
-                    <li><a href="#"><i class="lni lni-linkedin-original"></i></a></li>
-                </ul> social -->
+
                 <div class="footer-support text-center">
-                    
-                    <!-- <span class="number">+8801234567890</span> -->
-                    <span class="mail">support@taxargo.com</span>
+                    </i><span style="color: white;" class="mail" ><i class="far fa-envelope"></i> support@taxargo.com</span>
                 </div>
                 <div class="copyright text-center mt-35">
-                    <p class="text">Designed by <a href="https://uideck.com" rel="nofollow">Chetanya Tomar</a></p>
+                    <p class="text">Designed by <a href="https://wa.link/xbjnec" rel="nofollow">Chetanya Tomar <i class="lni lni-whatsapp"></i></a></p>
                 </div> <!--  copyright -->
             </div>
         </div> <!-- row -->
     </div> <!-- container -->
 </section>
+
