--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/images/logo.jpg" type="image/png">
         
     <!--====== Magnific Popup CSS ======-->
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -165,6 +165,7 @@
     
     <!--====== Main js ======-->
     <script src="assets/js/main.js"></script>
+    
     
 </body>
 
