--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -4,10 +4,10 @@
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg">
                    
-                    <a class="navbar-brand" href="#">
-                        <img src="assets/images/logo.svg" alt="Logo">
+                    <a class="navbar-brand" href="#home" >
+                        <img  src="assets/images/logofinal1.jpg" style="height: 64px; width: 74px;" alt="Logo">
                     </a>
-                    <h4 class="d-md-none">taxsupport</h4>
+                    
                     
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTwo" aria-controls="navbarTwo" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="toggler-icon"></span>
