--- a/views/slider.ejs
+++ b/views/slider.ejs
@@ -9,7 +9,7 @@
                         <div class=" col-lg-8 ">
                             <div class="slider-content">
                                 <h1 class="title text-center">Filing ITR is one Click away</h1>
-                                <p class="text">We blend insights and strategy to create digital products for forward-thinking organisations.</p>
+                                <p class="text text-center">We are the Business Aficionado and we believe in giving the best services to our customer's trust. </p>
                                 <div class="row justify-content-center">
                                     <div class="col-md-6">
                                         <ul class="slider-btn rounded-buttons">
